[gd_scene load_steps=4 format=2]

[ext_resource path="res://textures/Vegetation.png" type="Texture" id=1]
[ext_resource path="res://scripts/Vegetation.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.573086, 0.668003, 0.440458 )

[node name="Vegetation" type="Spatial"]
script = ExtResource( 2 )

[node name="SpriteOrigin" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0 )

[node name="Sprite" type="Sprite3D" parent="SpriteOrigin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.874139, 0 )
pixel_size = 0.125
shaded = true
alpha_cut = 2
texture = ExtResource( 1 )
vframes = 2
hframes = 8
frame = 1

[node name="Tween" type="Tween" parent="."]

[node name="Trigger" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Trigger"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.822511, -0.431352 )
shape = SubResource( 1 )
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="Trigger" to="." method="_on_Trigger_body_entered"]
